other/check-subjectaccessreview/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-subjectaccessreview
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - script:
        content: |
          sed 's/validationFailureAction: Audit/validationFailureAction: Enforce/' ../check-subjectaccessreview.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          export USERNAME=subreviewuser
          export BADUSERNAME=badsubreviewuser
          export CA=ca.crt
          #### Get CA certificate from kubeconfig assuming it's the first in the list.
          kubectl config view --raw -o jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > ./ca.crt
          #### Set CLUSTER_SERVER from kubeconfig assuming it's the first in the list.
          CLUSTER_SERVER="$(kubectl config view --raw -o jsonpath='{.clusters[0].cluster.server}')"
          #### Set CLUSTER from kubeconfig assuming it's the first in the list.
          CLUSTER="$(kubectl config view --raw -o jsonpath='{.clusters[0].name}')"
          #### Generate private key
          openssl genrsa -out $USERNAME.key 2048
          openssl genrsa -out $BADUSERNAME.key 2048
          #### Create CSR
          openssl req -new -key $USERNAME.key -out $USERNAME.csr -subj "/O=testorg/CN=$USERNAME"
          openssl req -new -key $BADUSERNAME.key -out $BADUSERNAME.csr -subj "/O=testorg/CN=$BADUSERNAME"
          #### Send CSR to kube-apiserver for approval
          cat <<EOF | kubectl apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: $USERNAME
          spec:
            request: $(cat $USERNAME.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
          cat <<EOF | kubectl apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: $BADUSERNAME
          spec:
            request: $(cat $BADUSERNAME.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
          #### Approve CSR
          kubectl certificate approve $USERNAME
          kubectl certificate approve $BADUSERNAME
          #### Download certificate
          kubectl get csr $USERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $USERNAME.crt
          kubectl get csr $BADUSERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $BADUSERNAME.crt
          ####
          #### Create the credential object and output the new kubeconfig file
          kubectl config set-credentials $USERNAME --client-certificate=$USERNAME.crt --client-key=$USERNAME.key --embed-certs
          kubectl config set-credentials $BADUSERNAME --client-certificate=$BADUSERNAME.crt --client-key=$BADUSERNAME.key --embed-certs
          #### Set the context
          kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
          kubectl config set-context $BADUSERNAME-context --user=$BADUSERNAME --cluster=$CLUSTER
          # Delete CSR
          kubectl delete csr $USERNAME
          kubectl delete csr $BADUSERNAME
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
    - apply:
        file: chainsaw-step-03-apply-2.yaml
    - apply:
        file: chainsaw-step-03-apply-3.yaml
    - apply:
        file: chainsaw-step-03-apply-4.yaml
    - apply:
        file: chainsaw-step-03-apply-5.yaml
  - name: step-04
    try:
    - script:
        content: kubectl create --context=subreviewuser-context -f cm-one.yaml
    - script:
        content: if kubectl create --context=badsubreviewuser-context -f cm-two.yaml;
          then exit 1; else exit 0; fi
  - name: step-05
    try:
    - script:
        content: kubectl config unset users.subreviewuser
    - script:
        content: kubectl config unset users.badsubreviewuser
    - script:
        content: kubectl config unset contexts.subreviewuser-context
    - script:
        content: kubectl config unset contexts.badsubreviewuser-context
    - script:
        content: kubectl delete cpol check-subjectaccessreview
    - script:
        content: kubectl delete -f cm-one.yaml
